--- a/.github/workflows/fetch-crowdin-translations.yml
+++ b/.github/workflows/fetch-crowdin-translations.yml
@@ -29,9 +29,8 @@ jobs:
         fetch-depth: 1
         submodules: true
 
-
     - name: Download translations from Crowdin
-      run: python ../utils/l10nUtil.py exportTranslations -o .
+      run: python utils/l10nUtil.py exportTranslations -o .
       env:
         crowdinProjectID: ${{ vars.CROWDIN_ID }}
         crowdinAuthToken: ${{ secrets.CROWDIN_TOKEN }}
