--- a/.github/workflows/fetch-crowdin-translations.yml
+++ b/.github/workflows/fetch-crowdin-translations.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Install Crowdin API
       run: |
         python -m pip install --upgrade pip
-        pip install crowdin-client
+        pip install crowdin-api-client
     - name: Install pre-commit
       run: |
         python -m pip install --upgrade pip
