--- a/.github/workflows/fetch-crowdin-translations.yml
+++ b/.github/workflows/fetch-crowdin-translations.yml
@@ -38,6 +38,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install crowdin-api-client
+        pip install lxml requests
+
     - name: Install pre-commit
       run: |
         python -m pip install --upgrade pip
