--- a/.github/workflows/fetch-crowdin-translations.yml
+++ b/.github/workflows/fetch-crowdin-translations.yml
@@ -39,6 +39,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install crowdin-api-client
         pip install lxml requests
+        pip install markdown
 
     - name: Install pre-commit
       run: |
