--- a/.github/workflows/fetch-crowdin-translations.yml
+++ b/.github/workflows/fetch-crowdin-translations.yml
@@ -37,9 +37,12 @@ jobs:
     - name: Install Crowdin API
       run: |
         python -m pip install --upgrade pip
-        pip install crowdin-api-client
-        pip install lxml requests
-        pip install markdown mdx_truly_sane_lists markdown-link-attr-modifier mdx-gh-links md2html markdown2 pigments
+        pip install crowdin-api-client==1.21.0
+        pip install lxml requests 
+        pip install Markdown==3.7
+        pip install mdx_truly_sane_lists==1.3
+        pip install markdown-link-attr-modifier==0.2.1
+        pip install mdx-gh-links==0.4
 
     - name: Install pre-commit
       run: |
