--- a/.github/workflows/fetch-crowdin-translations.yml
+++ b/.github/workflows/fetch-crowdin-translations.yml
@@ -43,6 +43,7 @@ jobs:
         pip install mdx_truly_sane_lists==1.3
         pip install markdown-link-attr-modifier==0.2.1
         pip install mdx-gh-links==0.4
+        pip install nh3==0.2.19
 
     - name: Install pre-commit
       run: |
