--- a/.github/workflows/fetch-crowdin-translations.yml
+++ b/.github/workflows/fetch-crowdin-translations.yml
@@ -45,11 +45,11 @@ jobs:
         pip install mdx-gh-links==0.4
         pip install nh3==0.2.19
 
-    - name: Install pre-commit
-      run: |
-        python -m pip install --upgrade pip
-        pip install pre-commit
-        pre-commit install
+    #- name: Install pre-commit
+      #run: |
+        #python -m pip install --upgrade pip
+        #pip install pre-commit
+        #pre-commit install
 
     # Job will fail if pre-commit checks fail
     - name: Download translations from Crowdin
