--- a/.github/workflows/fetch-crowdin-translations.yml
+++ b/.github/workflows/fetch-crowdin-translations.yml
@@ -52,10 +52,10 @@ jobs:
         #pre-commit install
 
     # Job will fail if pre-commit checks fail
-    - name: Create dir for repo
+    - name: Create dir for l10n
       run: |
         if [ -d "l10n" ]; then
-        echo "Warning: Folder already exists.
+        echo "Warning: Folder already exists.""
           #rm -rf "${{ inputs.repo }}"
         else
         mkdir l10n
