--- a/.github/workflows/fetch-crowdin-translations.yml
+++ b/.github/workflows/fetch-crowdin-translations.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Create dir for l10n
       run: |
         if [ -d "l10n" ]; then
-        echo "Warning: Folder already exists.""
+        echo "Warning: Folder already exists."
           #rm -rf "${{ inputs.repo }}"
         else
         mkdir l10n
