--- a/.github/workflows/regenerate_english_userDocs_translation_source.yml
+++ b/.github/workflows/regenerate_english_userDocs_translation_source.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Checkout add-on
       uses: actions/checkout@v4
       with:
-        repository: ${{ inputs.repo }}
+        repository: addons/${{ inputs.repo }}
         path: addon-${{ inputs.repo }}
     - name: Set up python
       uses: actions/setup-python@v5
