--- a/.github/workflows/regenerate_english_userDocs_translation_source.yml
+++ b/.github/workflows/regenerate_english_userDocs_translation_source.yml
@@ -38,6 +38,5 @@ jobs:
     - name: update xliff files
       if: hashfiles('${{ inputs.repo}}/readme.md') == hashfiles('addon-${{ inputs.repo }}/${{ inputs.repo}}.md')
       run: |
-        cd ${{ inputs.repo }}
-        python ../utils/markdownTranslate.py updateXliff -x ${{ inputs.repo }}.xliff -m ../addon-${{ inputs.repo }}/readme.md -o ${{ inputs.repo }}.xliff.temp
-                mv ${{ inputs.repo }}.xliff.temp ${{ inputs.repo }}.xliff -f
+        cd addon-${{ inputs.repo }}
+        python ../utils/markdownTranslate.py updateXliff -x ${{ inputs.repo }}/${{ inputs.repo }}.xliff -m readme.md -o ${{ inputs.repo }}/${{ inputs.repo }}.xliff.temp
