Checkout stable branch to update xliff

--- a/.github/workflows/regenerate_english_userDocs_translation_source.yml
+++ b/.github/workflows/regenerate_english_userDocs_translation_source.yml
@@ -24,6 +24,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: nvdaaddons/${{ inputs.repo }}
+        ref: stable
         path: addon-${{ inputs.repo }}
     - name: Set up python
       uses: actions/setup-python@v5
