--- a/.github/workflows/regenerate_english_userDocs_translation_source.yml
+++ b/.github/workflows/regenerate_english_userDocs_translation_source.yml
@@ -37,7 +37,7 @@ jobs:
         pip install lxml requests
 
     - name: update xliff files
-      if: ${{ hashFiles('${{ inputs.repo}}/${{ inputs.repo }}.md') != hashFiles('addon-${{ inputs.repo }}/$readme.md') }}
+      if: ${{ hashFiles('${{ inputs.repo}}/${{ inputs.repo }}.md') != hashFiles('addon-${{ inputs.repo }}/readme.md') }}
       run: |
         cd addon-${{ inputs.repo }}
         python ../utils/markdownTranslate.py updateXliff -x ../${{ inputs.repo }}/${{ inputs.repo }}.xliff -m readme.md -o ../${{ inputs.repo }}/${{ inputs.repo }}.xliff.temp
