--- a/.github/workflows/regenerate_english_userDocs_translation_source.yml
+++ b/.github/workflows/regenerate_english_userDocs_translation_source.yml
@@ -55,3 +55,9 @@ jobs:
         git pull
         git push
         fi
+
+    - name: Upload source
+      run: python utils/crowdinSynk.py
+      env:
+        crowdinProjectID: ${{ vars.CROWDIN_ID }}
+        crowdinAuthToken: ${{ secrets.CROWDIN_TOKEN }}
