--- a/.github/workflows/regenerate_english_userDocs_translation_source.yml
+++ b/.github/workflows/regenerate_english_userDocs_translation_source.yml
@@ -34,7 +34,16 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install lxml requests
+    - name: Install Crowdin API
+      run: |
+        python -m pip install --upgrade pip
+        pip install crowdin-api-client==1.21.0
+        pip install lxml requests 
+        pip install Markdown==3.7
+        pip install mdx_truly_sane_lists==1.3
+        pip install markdown-link-attr-modifier==0.2.1
+        pip install mdx-gh-links==0.4
+        pip install nh3==0.2.19
 
     - name: update xliff files
       run: |
@@ -57,7 +66,10 @@ jobs:
         fi
 
     - name: Upload source
-      run: python utils/crowdinSynk.py
+      if: always()
+      run: |
+        python utils/crowdinSynk.py ${{ inputs.repo }}.xliff
+        python utils/crowdinSynk.py ${{ inputs.repo }}.xliff
       env:
         crowdinProjectID: ${{ vars.CROWDIN_ID }}
         crowdinAuthToken: ${{ secrets.CROWDIN_TOKEN }}
