--- a/.github/workflows/regenerate_english_userDocs_translation_source.yml
+++ b/.github/workflows/regenerate_english_userDocs_translation_source.yml
@@ -68,6 +68,7 @@ jobs:
     - name: Upload source
       if: always()
       run: |
+        cd ${{ inputs.repo }}
         python ../utils/crowdinSynk.py ${{ inputs.repo }}.pot
         python ../utils/crowdinSynk.py ${{ inputs.repo }}.xliff
       env:
