--- a/.github/workflows/regenerate_english_userDocs_translation_source.yml
+++ b/.github/workflows/regenerate_english_userDocs_translation_source.yml
@@ -69,8 +69,8 @@ jobs:
       if: always()
       run: |
         cd ${{ inputs.repo }}
-        python ../utils/crowdinSync.py ${{ inputs.repo }}.pot
-        python ../utils/crowdinSync.py ${{ inputs.repo }}.xliff
+        python ../utils/crowdinSync.py uploadSourceFile ${{ inputs.repo }}.pot
+        python ../utils/crowdinSync.py uploadSourceFile ${{ inputs.repo }}.xliff
       env:
         crowdinProjectID: ${{ vars.CROWDIN_ID }}
         crowdinAuthToken: ${{ secrets.CROWDIN_TOKEN }}
