--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -10,8 +10,9 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        repo: [\
-          'emoticons', 'goldwave', \
+        repo: [
+          'emoticons',
+          'goldwave',
         ]
     with:
       repo: ${{ matrix.repo }}
