--- a/.github/workflows/updateSources.yml
+++ b/.github/workflows/updateSources.yml
@@ -65,9 +65,9 @@ jobs:
         if git diff --staged --quiet; then
         echo "Nothing added to commit."
         else
-        git commit -m "Regenerate documentation"
+        git commit -m "Update sources"
         git branch -u origin/main
-        git pull
+        git pull --rebase
         git push
         fi
 
