--- a/.github/workflows/updateSources.yml
+++ b/.github/workflows/updateSources.yml
@@ -47,6 +47,7 @@ jobs:
     - name: Update pot
       run: |
         mv ${{ inputs.repo }}/${{ inputs.repo }}.pot addon-${{ inputs.repo }} -f
+        cd addon-${{ inputs.repo }}
         scons pot
     - name: Move pot
       run: |
