--- a/.github/workflows/updateAddon.yml
+++ b/.github/workflows/updateAddon.yml
@@ -56,6 +56,7 @@ jobs:
         file="${{ github.workspace }}/l10n/${{ inputs.repo }}/l10n/$dirBasename/${{ inputs.repo }}.po"
         if -f $file; then
         mv $file $dir/LC_MESSAGES/nvda.po -f
+        echo "Moved $file"
         else
         echo "$file doesn't exist."
         fi
@@ -66,6 +67,7 @@ jobs:
         cd addon-${{ inputs.repo }}
         git config --local user.name github-actions
         git config --local user.email github-actions@github.com
+        git status
         git add -u addon
         if git diff --staged --quiet; then
         echo "Nothing added to commit."
