--- a/.github/workflows/updateAddon.yml
+++ b/.github/workflows/updateAddon.yml
@@ -51,11 +51,13 @@ jobs:
     - name: Move translations
       run: |
         cd addon-${{ inputs.repo }}/addon/locale
+        file="${{ github.workspace }}/l10n/${{ inputs.repo }}/pt/${{ inputs.repo }}.po"
+        mv $file ./pt/LC_MESSAGES/nvda.po
         for dir in *; do
         dirBasename=$(basename "$dir")
         file="${{ github.workspace }}/l10n/${{ inputs.repo }}/$dirBasename/${{ inputs.repo }}.po"
         if -f $file; then
-        mv $file $dir/LC_MESSAGES/nvda.po -f
+        mv $file ./$dir/LC_MESSAGES/nvda.po -f
         echo "Moved $file"
         else
         echo "$file doesn't exist."
