Try to fix move translations

--- a/.github/workflows/updateAddon.yml
+++ b/.github/workflows/updateAddon.yml
@@ -57,7 +57,7 @@ jobs:
         dirBasename=$(basename "$dir")
         file="${{ github.workspace }}/l10n/${{ inputs.repo }}/$dirBasename/${{ inputs.repo }}.po"
         if -f $file; then
-        mv $file ./$dir/LC_MESSAGES/nvda.po -f
+        mv $file "${{ github.workspace }}/addon-${{ inputs.repo }}/addon/locale/$dirBasename/LC_MESSAGES/nvda.po
         echo "Moved $file"
         else
         echo "$file doesn't exist."
