--- a/.github/workflows/updateAddon.yml
+++ b/.github/workflows/updateAddon.yml
@@ -15,6 +15,8 @@ on:
 jobs:
   updateAddon:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  
 
     steps:
     - name: Checkout repository
