--- a/.github/workflows/updateAddon.yml
+++ b/.github/workflows/updateAddon.yml
@@ -28,6 +28,7 @@ jobs:
         repository: nvdaaddons/${{ inputs.repo }}
         ref: stable
         path: addon-${{ inputs.repo }}
+        TOKEN: ${{ secrets.PUSH_TO_REPOS }}
     - name: Set up python
       uses: actions/setup-python@v5
       with:
