Move markdown to add-ons

--- a/.github/workflows/updateAddon.yml
+++ b/.github/workflows/updateAddon.yml
@@ -63,6 +63,12 @@ jobs:
         else
         echo "$file doesn't exist."
         fi
+        file="$dir/${{ inputs.repo }}.xliff"
+        if [ -f $file ]; then
+        python utils/markdownTranslate.py xliff_md --xliffPath="$file" --mdPath="addon-${{ inputs.repo }}/addon/doc/$dirBasename/readme.md"
+        else
+        echo "$file doesn't exist"
+        fi
         done
     - name: Commit and push
       id: commit
