--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -76,3 +76,15 @@ jobs:
           git branch -u origin/main
           git pull
           git push
+
+      - name: Crowdin sync
+        uses: crowdin/github-action@v2
+        with:
+          upload_sources: true
+          upload_translations: false
+          source: ${{ inputs.repo }}/${{ inputs.repo }}.pot
+          translation: /${{ inputs.repo }}/%two_letters_code%/${{ inputs.repo }}.po
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
+          CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
