--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -76,8 +76,18 @@ jobs:
           git branch -u origin/main
           git pull
           git push
+      - name: Install Crowdin API
+        run: |
+          python -m pip install --upgrade pip
+          pip install crowdin-api-client==1.21.0
+          pip install lxml requests 
+          pip install Markdown==3.7
+          pip install mdx_truly_sane_lists==1.3
+          pip install markdown-link-attr-modifier==0.2.1
+          pip install mdx-gh-links==0.4
+          pip install nh3==0.2.19
 
-      - name: Download translations from Crowdin
+      - name: Upload translations to Crowdin
         run: python utils/l10nUtil.py uploadSourceFile --localeFilePath=${{ inputs.repo}}/${{ inputs.repo}}.pot
         env:
           crowdinProjectID: ${{ vars.CROWDIN_ID }}
