--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -71,6 +71,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git add .
           git add ${{ inputs.repo }}
           git commit -m "Register ${{ inputs.repo }}"
           git branch -u origin/main
