--- a/.github/workflows/getFiles.yml
+++ b/.github/workflows/getFiles.yml
@@ -39,3 +39,13 @@ jobs:
         env:
           crowdinProjectID: ${{ vars.CROWDIN_ID }}
           crowdinAuthToken: ${{ secrets.CROWDIN_TOKEN }}
+      - name: Commit and push
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add utils
+          git add ${{ inputs.repo }}
+          git commit -m "Register ${{ inputs.repo }}"
+          git branch -u origin/main
+          git pull
+          git push
