--- a/.github/workflows/updateAddon.yml
+++ b/.github/workflows/updateAddon.yml
@@ -65,6 +65,7 @@ jobs:
         fi
         file="$dir/${{ inputs.repo }}.xliff"
         if [ -f $file ]; then
+        echo "Markdown" > "addon-${{ inputs.repo }}/addon/doc/$dirBasename/readme.md"
         python utils/markdownTranslate.py generateMarkdown -x "$file" -o "addon-${{ inputs.repo }}/addon/doc/$dirBasename/readme.md"
         else
         echo "$file doesn't exist"
