Add add-ons to update sources

--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -11,8 +11,59 @@ jobs:
       max-parallel: 1
       matrix:
         repo: [
+          'Access8Math',
+          'beepKeyboard',
+          'BMI',
+          'charInfo',
+          'clipContentsDesigner',
+          'clock',
+          'columnsReview',
+          'controlUsageAssistant',
+          'cursorLocator',
+          'customNotifications',
+          'dayOfTheWeek',
+          'debugHelper',
+          'dropbox',
+          'easyTableNavigator',
           'emoticons',
+          'eMule',
+          'enhancedAnnotations',
+          'enhancedTouchGestures',
+          'goldenCursor',
           'goldwave',
+          'inputLock',
+          'instantTranslate',
+          'mp3DirectCut',
+          'MSEdgeDiscardAnnouncements',
+          'numpadNavMode',
+          'nvdaDevTestToolbox',
+          'objPad',
+          'objWatcher',
+          'outlookExtended',
+          'pcKbBrl',
+          'proxy',
+          'rdAccess',
+          'readFeeds',
+          'readonlyProfiles',
+          'reportSymbols',
+          'resourceMonitor',
+          'reviewCursorCopier',
+          'robEnhancements',
+          'sayCurrentKeyboardLanguage',
+          'sayProductNameAndVersion',
+          'searchWith',
+          'SentenceNav''',
+          'speechLogger',
+          'stationPlaylist',
+          'systrayList',
+          'tonysEnhancements',
+          'unicodeBrailleInput',
+          'updateChannel',
+          'urlShortener',
+          'virtualRevision',
+          'winMag',
+          'winWizard',
+          'wordNav',
         ]
     with:
       repo: ${{ matrix.repo }}
