Limit concurrency for import

--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -12,6 +12,9 @@ on:
         description: 'Repository name'
         type: 'string'
         required: true
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   importToCrowdin:
     runs-on: ubuntu-latest
