--- a/.github/workflows/updateSources.yml
+++ b/.github/workflows/updateSources.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
 
     - name: Checkout add-on
       uses: actions/checkout@v4
@@ -26,12 +26,21 @@ jobs:
         repository: nvdaaddons/${{ inputs.repo }}
         ref: stable
         path: addon-${{ inputs.repo }}
+    - name: Cache dependencies
+      id: cacheDependencies
+      uses: actions/cache@v4
+      with:
+        path: .
+        key: ${{ github.ref }}-${{ github.run_id }}
+
     - name: Set up python
+      if: steps.cacheDependencies.outputs.cache-hit != 'true'
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
 
     - name: Install dependencies
+      if: steps.cacheDependencies.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
         pip install scons
