--- a/.github/workflows/updateSources.yml
+++ b/.github/workflows/updateSources.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/cache@v4
       with:
         path: .
-        key: ${{ github.ref }}-${{ github.run_number }}
+        key: ${{ runner.os }}
 
     - name: Set up python
       if: steps.cacheDependencies.outputs.cache-hit != 'true'
