--- a/.github/workflows/fetch-crowdin-translations.yml
+++ b/.github/workflows/fetch-crowdin-translations.yml
@@ -23,35 +23,18 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
       with:
         ref: main
         fetch-depth: 1
         submodules: true
-
-
-    - name: Set up python
+    - name: "Set up Python"
       uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
-    - name: Install Crowdin API
-      run: |
-        python -m pip install --upgrade pip
-        pip install crowdin-api-client==1.21.0
-        pip install lxml requests 
-        pip install Markdown==3.7
-        pip install mdx_truly_sane_lists==1.3
-        pip install markdown-link-attr-modifier==0.2.1
-        pip install mdx-gh-links==0.4
-        pip install nh3==0.2.19
+        python-version-file: ".python-version"
 
-    #- name: Install pre-commit
-      #run: |
-        #python -m pip install --upgrade pip
-        #pip install pre-commit
-        #pre-commit install
-
-    # Job will fail if pre-commit checks fail
+    - name: Install uv
+      uses: astral-sh/setup-uv@v6
     - name: Create dir for l10n
       run: |
         if [ -d "l10n" ]; then
@@ -61,7 +44,7 @@ jobs:
         mkdir l10n
         fi
     - name: Download translations from Crowdin
-      run: python utils/l10nUtil.py exportTranslations -o l10n
+      run: uv run utils/l10nUtil.py exportTranslations -o l10n
       env:
         crowdinProjectID: ${{ vars.CROWDIN_ID }}
         crowdinAuthToken: ${{ secrets.CROWDIN_TOKEN }}
