--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 utils/__pycache__
+# Python-generated files
+__pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
+
+# Virtual environments
+.venv
