--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -23,16 +23,16 @@ jobs:
 
     steps:
       - name: Checkout main branch
-        uses: actions/checkout@v4
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v5
+        uses: actions/checkout@v5
+      - name: "Set up Python"
+        uses: actions/setup-python@v6
         with:
-          python-version: 3.11
-      - name: Install dependencies
+          python-version-file: ".python-version"
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+      - name: Install gettext
         run: |
-          python -m pip install --upgrade pip
-          pip install scons markdown
-          pip install lxml requests
           sudo apt update
           sudo apt install gettext
       - name: Checkout add-on
@@ -80,25 +80,15 @@ jobs:
           git branch -u origin/main
           git pull
           git push
-      - name: Install Crowdin API
-        run: |
-          python -m pip install --upgrade pip
-          pip install crowdin-api-client==1.21.0
-          pip install lxml requests 
-          pip install Markdown==3.7
-          pip install mdx_truly_sane_lists==1.3
-          pip install markdown-link-attr-modifier==0.2.1
-          pip install mdx-gh-links==0.4
-          pip install nh3==0.2.19
 
       - name: Upload pot to Crowdin
-        run: python utils/l10nUtil.py uploadSourceFile --localFilePath=${{ inputs.repo}}/${{ inputs.repo}}.pot
+        run: uv run python utils/l10nUtil.py uploadSourceFile --localFilePath=${{ inputs.repo}}/${{ inputs.repo}}.pot
         env:
           crowdinProjectID: ${{ vars.CROWDIN_ID }}
           crowdinAuthToken: ${{ secrets.CROWDIN_TOKEN }}
       - name: Upload xliff to Crowdin
         if: always()
-        run: python utils/l10nUtil.py uploadSourceFile --localFilePath=${{ inputs.repo}}/${{ inputs.repo}}.xliff
+        run: uv python utils/l10nUtil.py uploadSourceFile --localFilePath=${{ inputs.repo}}/${{ inputs.repo}}.xliff
         env:
           crowdinProjectID: ${{ vars.CROWDIN_ID }}
           crowdinAuthToken: ${{ secrets.CROWDIN_TOKEN }}
