--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -20,6 +20,15 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    strategy:
+      matrix:
+        python-version:
+            strategy:
+      matrix:
+        python-version:
+          - "3.7"
+          - "3.11"
+          - "3.13"
 
     steps:
       - name: Checkout main branch
@@ -27,10 +36,12 @@ jobs:
       - name: "Set up Python"
         uses: actions/setup-python@v6
         with:
-          python-version-file: ".python-version"
+          python-version: ${{ matrix.python-version }}
 
       - name: Install uv
         uses: astral-sh/setup-uv@v6
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
       - name: Install gettext
         run: |
           sudo apt update
