--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -25,7 +25,7 @@ jobs:
         python-version:
           - "3.11"
           - "3.13"
-
+      fail-fast: false
     steps:
       - name: Checkout main branch
         uses: actions/checkout@v5
