--- a/.github/workflows/updateSources.yml
+++ b/.github/workflows/updateSources.yml
@@ -52,6 +52,9 @@ jobs:
     - name: Move pot
       run: |
         mv addon-${{ inputs.repo }}/${{ inputs.repo }}.pot ${{ inputs.repo }} -f
+        mv addon-${{ inputs.repo }}/readme.md ${{ inputs.repo }} -f
+        cd ${{ inputs.repo }}
+        mv readme.md ${{ inputs.repo }}.md -f
     - name: update xliff
       run: |
         cd addon-${{inputs.repo}}
