--- a/.github/workflows/updateSources.yml
+++ b/.github/workflows/updateSources.yml
@@ -57,9 +57,8 @@ jobs:
         mv readme.md ${{ inputs.repo }}.md -f
     - name: update xliff
       run: |
-        cd ${{inputs.repo}}
-        python ./utils/markdownTranslate.py updateXliff -x ${{ inputs.repo }}.xliff -m ${{ inputs.repo }}.md -o ${{ inputs.repo }}.xliff.temp
-        mv ${{ inputs.repo}}.xliff.temp ${{ inputs.repo }}.xliff
+        python /utils/markdownTranslate.py updateXliff -x ${{ inputs.repo }}/${{ inputs.repo }}.xliff -m ${{ inputs.repo }}/${{ inputs.repo }}.md -o ${{ inputs.repo }}.xliff.temp
+        mv ${{ inputs.repo}}.xliff.temp ${{ inputs.repo }}/${{ inputs.repo }}.xliff
     - name: Commit and push
       id: commitAddon
       run: |
